<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="16dp">
            <ImageView
                android:id="@+id/photo_incident"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerInside"
                android:cropToPadding="true"
                android:background="@color/black"
                android:contentDescription="TODO" />
            <ImageButton
                android:id="@+id/prendre_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_photo"
                android:importantForAccessibility="no" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crime_titre"/>
            <EditText
                android:id="@+id/et_titre_crime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:hint="@string/crime_titre_mess"
                android:inputType="text"
                android:importantForAutofill="no"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_details"/>
    <Button
        android:id="@+id/btn_date_crime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_incident"/>

    <Button
        android:id="@+id/btn_time_crime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_incident"/>

    <CheckBox
        android:id="@+id/cb_crime_resolu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/crime_resolu" />

    <Button
        android:id="@+id/suspect_incident"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texte_choix_suspect"/>

    <Button
        android:id="@+id/rapport_incident"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texte_rapport_incident"/>

    <Button
        android:id="@+id/appel_rapport_incident"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texte_appel_rapport_incident"/>

</LinearLayout>